--- a/publican/README
+++ b/publican/README
@@ -21,7 +21,7 @@ Makefile with Translations:
 
 XML_LANG        = en-US
 DOCNAME         = Virtualization
-OTHER_LANGS     = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
+OTHER_LANGS     = ar-AR as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 TRANSLATIONS    = $(XML_LANG) $(OTHER_LANGS)
 COMMON_CONFIG  = /usr/share/publican
 include $(COMMON_CONFIG)/make/Makefile.common
@@ -33,7 +33,7 @@ Makefile for a Book belonging to a Product with Translations:
 XML_LANG        = en-US
 DOCNAME         = Virtualization
 PRODUCT          = Red_Hat_Enterprise_Linux
-OTHER_LANGS     = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
+OTHER_LANGS     = ar-AR as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 TRANSLATIONS    = $(XML_LANG) $(OTHER_LANGS)
 COMMON_CONFIG  = /usr/share/publican
 include $(COMMON_CONFIG)/make/Makefile.common
