--- a/publican-redhat/it-IT/Feedback.po
+++ b/publican-redhat/it-IT/Feedback.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"POT-Creation-Date: 2010-08-06T02:45:30\n"
 "PO-Revision-Date: 2010-03-01 15:41+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
@@ -26,32 +26,32 @@ msgstr "Avete bisogno di aiuto?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>aiuto</primary> <secondary>come ottenere aiuto</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "Se avete incontrato delle difficoltà con una procedura descritta in questa documentazione sarà possibile ottenere assistenza nei modi seguenti:"
+msgstr "Se avete incontrato delle difficoltà con una procedura descritta in questa documentazione visitate il Portale clienti di Red Hat su <ulink url=\"http://access.redhat.com\" />. Attraverso il portale clienti potrete:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "andate alla ricerca attraverso un knowledgebase degli articoli di supporto tecnico relativi ai prodotti di Red Hat"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat Global Support Services"
+msgstr "inviate una richiesta di supporto al Red Hat Global Support Services (GSS)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "Altre documentazioni di Red Hat"
+msgstr "accesso documentazione di un altro prodotto"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat presenta un gran numero di mailing list elettroniche per la discussione sulle tecnologie e sul software di Red Hat. È possibile trovare un elenco di liste pubbliche disponibili su <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Fate clic sul nome della lista desiderata per eseguire la registrazione ad accedere ai relativi archivi."
+msgstr "Red Hat presenta un gran numero di mailing list elettroniche per la discussione sulle tecnologie e sul software di Red Hat. È possibile trovare un elenco di liste pubbliche disponibili su <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Fate clic sul nome della lista desiderata per eseguire la registrazione ad accedere ai relativi archivi."
 
 #. Tag: title
 #, no-c-format
@@ -61,7 +61,7 @@ msgstr "Inviateci i vostri commenti!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>feedback</primary> <secondary>informazioni di contatto per questo manuale</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -69,7 +69,7 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "Se individuate degli errori di battitura in questo manuale, o se pensate di poter contribuire al suo miglioramento, contattateci subito! Inviate i vostri suggerimenti tramite Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> sul componente <application>&PRODUCT;.</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "Quando inviate un bug report assicuratevi di indicare l'identificatore del manuale: <citetitle>&BOOKID;</citetitle>"
 
