--- a/publican-openshift/pot/Feedback.pot
+++ b/publican-openshift/pot/Feedback.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2012-02-15T06:06:53\n"
-"PO-Revision-Date: 2012-02-15T06:06:53\n"
+"POT-Creation-Date: 2012-02-15T06:29:44\n"
+"PO-Revision-Date: 2012-02-15T06:29:44\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -29,12 +29,12 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\" /> to search or browse through technical support articles about Red Hat products, or visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. You can also access the OpenShift web site at <ulink url=\"https://www.redhat.com/openshift/\" /> to find blogs, FAQs, forums, and other sources of information."
+msgid "If you experience difficulty with a procedure or other information described in this documentation, visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\" /> to search or browse through technical support articles about Red Hat products, or visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. You can also access the OpenShift web site at <ulink url=\"https://openshift.redhat.com/\" /> to find blogs, FAQs, forums, and other sources of information."
 msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr ""
 
 #. Tag: title
