Fix bridgehead links not working in html. BZ #711348
git-svn-id: file:///srv/svn/publican/trunk@2022 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Changes
+++ b/publican/Changes
@@ -19,6 +19,7 @@
   - Truncate PO Fuzzy/Un-transtaled message, added PO line number. BZ #697380
   - Add Author_Group.xml handling for translations. BZ #697371
   - Split pod from publican command to allow auto-generation.
+  - Fix bridgehead links not working in html. BZ #711348
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
