--- a/publican/Changes
+++ b/publican/Changes
@@ -44,6 +44,7 @@
   - Fix corpauthor killing FOP. BZ #756864
   - Remove --cvs option.
   - Update Conventions translation in pt-BR <ldelima@redhat.com>
+  - Fix build failing when source language directory is read only. BZ #798484
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
