--- a/publican/Changes
+++ b/publican/Changes
@@ -50,6 +50,7 @@
   - Added web_cfg to allow non-standard paths for rpm based web sites.
   - Ensure xml:lang is set by XmlClean for DocBook 5 sources. BZ #696397
   - Added handling of defaults file. BZ #599283
+  - Catch txt not being rebuilt. BZ #802576
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
