--- a/publican/Changes
+++ b/publican/Changes
@@ -53,6 +53,7 @@
   - Catch txt not being rebuilt. BZ #802576
   - Catch invalid version when installing book. BZ #748657
   - Fix duplicate IDs in HTML outputs. BZ #788576
+  - Fix some epub validation errors. BZ #701667
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
