--- a/publican/Changes
+++ b/publican/Changes
@@ -59,6 +59,7 @@
   - Add sort_order parameter. BZ #744661
   - Fix para tag not getting newline in TXT output. BZ #773120
   - Rework toc style to fit long name products and books. BZ #696834
+  - Fix PO merge output order. BZ #808088
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
