--- a/publican/Changes
+++ b/publican/Changes
@@ -63,6 +63,7 @@
   - Fix new entires in merged PO being double escaped. BZ #818768
   - Fix false warning "Message missing from PO file". BZ #737426
   - Fix create_brand not copying images. BZ #832345
+  - Fix rename requiring --name parameter. BZ #694698
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
